SERVER-21123 Explicitly prevent IV initialization counter overflow

GitOrigin-RevId: 81e1766a540b4c755f772ad5fc3f1cfd33c1dba9